@@ -55,8 +55,7 @@ class RepoHoldingsDataPrepTests(unittest.TestCase):
         logger.debug("Completed %s at %s (%.4f seconds)", self.id(), time.strftime("%Y %m %d %H:%M:%S", time.localtime()), endTime - self.__startTime)
 
     def testProcessLegacyFiles(self):
-        """ Test loading and processing operations for repository holdings and status echange data.
-        """
+        """Test loading and processing operations for repository holdings and status echange data."""
         try:
             rhdp = RepoHoldingsDataPrep(cfgOb=self.__cfgOb, sandboxPath=self.__sandboxPath, cachePath=self.__cachePath)
             rL = rhdp.getHoldingsUpdateEntry(updateId=self.__updateId)
@@ -74,6 +73,10 @@ class RepoHoldingsDataPrepTests(unittest.TestCase):
             rL = rhdp.getHoldingsRemovedEntry(updateId=self.__updateId)
             self.assertGreaterEqual(len(rL), 10)
             logger.debug("unreleased data length %r", len(rL))
+
+            rL = rhdp.getHoldingsCombinedEntry(updateId=self.__updateId)
+            self.assertGreaterEqual(len(rL), 10)
+            logger.debug("combined data length %r", len(rL))
             #
         except Exception as e:
             logger.exception("Failing with %s", str(e))
